Enhance build process and song retrieval functionality
- Update build.sh to use sudo for Docker commands, ensuring proper permissions during the build process.
- Modify Dockerfile to install git, enabling dependency retrieval from GitHub.
- Improve main.py by adding credential checks and detailed logging for song URL retrieval, enhancing error handling and user feedback.
- Update requirements.txt to pull the latest version of qqmusic-api directly from GitHub.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Decky QQ Music Plugin - Python Dependencies
 # CI/CD 构建时安装到 py_modules 目录
 
-qqmusic-api-python>=0.3.6
+# 从 GitHub 直接拉取最新代码
+git+https://github.com/jinzhongjia/QQMusicApi.git@main
