feat(provider): 实现多音源架构并集成网易云音乐
- 引入 ProviderManager 与 MusicProvider 基类，支持多音源注册与切换
- 新增 NeteaseProvider 实现，并添加 pyncm 依赖以支持网易云音乐服务
- 实现跨音源 Fallback 机制，主音源失效时自动尝试在备用音源中匹配歌曲
- 前端集成音源切换设置项，并基于 Capability 实现 UI 动态渲染
- 增加 ErrorBoundary 组件并重构后端 API 接口以支持多 Provider 路由

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 # Decky QQ Music Plugin - Python Dependencies
 # CI/CD 构建时安装到 py_modules 目录
 
-# 从 GitHub 拉取指定 commit 的代码
-# 使用 L-1124/QQMusicApi 仓库的 3ccc5daaf0b3d35a4b7375824b213c07687fa992 commit
+# QQ 音乐 API
 git+https://github.com/L-1124/QQMusicApi.git@3ccc5daaf0b3d35a4b7375824b213c07687fa992
+
+# 网易云音乐 API
+pyncm>=1.8.1
+
+# QR code generation for NetEase login
+qrcode[pil]>=8.0
+
 requests>=2.32.3
