--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Decky Loader plugin for QQ Music"
 requires-python = ">=3.11"
 dependencies = [
     "qqmusic-api-python>=0.3.6",
+    "pyncm>=1.8.1",
+    "qrcode[pil]>=8.0",
     "requests>=2.32.3",
 ]
 
