perf(docker): 引入 BuildKit 缓存并合并构建阶段
- 迁移构建脚本至 docker buildx build 并启用缓存挂载
- 使用 corepack 管理 pnpm 替代 npm 全局安装
- 合并 Dockerfile 打包阶段并移除冗余的中间容器
- 替换 Dockerfile 中的全量复制为定向文件复制以利用缓存

--- a/.mise.toml
+++ b/.mise.toml
@@ -12,7 +12,7 @@ description = "使用 Docker 构建插件"
 depends = ["clean"]
 run = """
 mkdir -p out
-DOCKER_BUILDKIT=1 docker build --no-cache --output type=local,dest=out .
+docker buildx build --output out .
 """
 
 [tasks.deploy]
